White space and size of wrapper issue persists but footer being at the bottom of the page is fixed

--- a/react-portfolio/src/components/Wrapper/style.css
+++ b/react-portfolio/src/components/Wrapper/style.css
@@ -1,12 +1,3 @@
 .wrapper {
-    height: calc(100vh - 100px); /* Change 100px to match the height of your footer */
-    width: 100%;
-    margin-bottom: 100px; /* Change 100px to match the height of your footer */
-    padding-bottom: 100px;
-    background-image: url("./snowy-hills.jpg");
-    background-size: cover;
-    background-position: center;
-    /*background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column; */
+   background-image: url("./snowy-hills.jpg");
 }
